# career-copilot

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  dependencies.py  logging_config.py  main.py
backend/app/agents/: __init__.py  analysis.py  base.py  efficiency.py  job.py  master.py  prompt_loader.py  resume.py
backend/app/api/: sse.py
backend/app/api/middleware/: __init__.py  rate_limit.py  rate_limit_headers.py  request_id.py
backend/app/api/v1/: analysis.py  auth.py  documents.py  generate.py  history.py  integrations.py  jd.py  jobs.py  meta.py  oauth.py  profile.py  reports.py  resumes.py  settings.py  trust.py  webhooks.py
backend/app/document/: __init__.py  parser.py
backend/app/events/: __init__.py  consumer.py
backend/app/integrations/: __init__.py  github.py
backend/app/llm/: __init__.py  embeddings.py  gateway.py  json_utils.py
backend/app/models/: __init__.py  db.py  schemas.py
backend/app/repository/: __init__.py  ability_repo.py  document_repo.py  evidence_repo.py  extracted_data_repo.py  generation_repo.py  jd_repo.py  job_repo.py  oauth_repo.py  profile_entry_repo.py  profile_repo.py  report_repo.py  resume_repo.py  sync_event_repo.py  trust_repo.py  user_repo.py
backend/app/security/: __init__.py  crypto.py
backend/app/services/: __init__.py  analysis_service.py  auth_service.py  document_service.py  event_bus.py  evidence.py  extraction_service.py  generate_service.py  github_sync_service.py  jd_service.py  job_service.py  oauth_service.py  profile_engine.py  profile_merge.py  report_service.py  resume_render.py  resume_service.py  resume_studio_service.py  screenshot_service.py  speech_service.py  trust_service.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py  0002_v05_profile_engine.py  0003_v08_oauth_and_sync.py  0004_v10_ga_core.py
backend/prompts/: analysis_assess.yaml  free_format.yaml  intent_classify.yaml  jd_analyze.yaml  jd_match.yaml  job_kit.yaml  meeting_parse.yaml  monthly_report.yaml  pr_parse.yaml  promotion.yaml  resume_diagnose.yaml  resume_generate.yaml  resume_parser.yaml  screenshot_parse.yaml  star.yaml  weekly_report.yaml
backend/tests/: test_agent_router.py  test_app_boot.py  test_crypto_roundtrip.py  test_document_parser.py  test_event_bus.py  test_evidence.py  test_extraction_service.py  test_generation_repo.py  test_github_extractors.py  test_github_webhook_signature.py  test_jd_and_prompts.py  test_llm_gateway.py  test_master_agent.py  test_master_parallel_dispatch.py  test_profile_merge.py  test_prompt_loader.py  test_rate_limiter.py  test_resume_render.py  test_resume_service.py  test_trust_service.py  test_v10_webhooks.py
extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  sidepanel.html  sidepanel.js
infra/docker/: Dockerfile.backend  docker-compose.yml
